--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^18.5.0",
-    "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-community/netinfo": "^11.1.0",
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/auth": "^18.6.1",
+    "@react-native-firebase/firestore": "^18.6.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/drawer": "^6.6.4",
@@ -28,6 +30,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.14.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.3"
   },
